<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="77dp"
        android:layout_height="61dp"
        android:layout_marginTop="4dp"
        android:text="@string/btnAddTxt"
        app:layout_constraintStart_toStartOf="@+id/input2"
        app:layout_constraintTop_toBottomOf="@+id/input2" />

    <Button
        android:id="@+id/btnSub"
        android:layout_width="77dp"
        android:layout_height="61dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnSubTxt"
        app:layout_constraintStart_toStartOf="@+id/btnAdd"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

    <Button
        android:id="@+id/btnMod"
        android:layout_width="77dp"
        android:layout_height="61dp"
        android:layout_marginTop="36dp"
        android:text="@string/btnModTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input2" />

    <Button
        android:id="@+id/btnMul"
        android:layout_width="77dp"
        android:layout_height="61dp"
        android:layout_marginTop="4dp"
        android:text="@string/btnMulTxt"
        app:layout_constraintEnd_toEndOf="@+id/input2"
        app:layout_constraintTop_toBottomOf="@+id/input2" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="77dp"
        android:layout_height="61dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnDivTxt"
        app:layout_constraintEnd_toEndOf="@+id/btnMul"
        app:layout_constraintTop_toBottomOf="@+id/btnMul" />

    <EditText
        android:id="@+id/input1"
        android:layout_width="243dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/placeholder"
        app:layout_constraintEnd_toEndOf="@+id/Txt1"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/Txt1"
        app:layout_constraintTop_toBottomOf="@+id/Txt1" />

    <EditText
        android:id="@+id/input2"
        android:layout_width="243dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/placeholder"
        app:layout_constraintEnd_toEndOf="@+id/input1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/input1"
        app:layout_constraintTop_toBottomOf="@+id/Txt2" />

    <TextView
        android:id="@+id/Txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/txt1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txt2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/input1"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/input1"
        app:layout_constraintTop_toBottomOf="@+id/input1" />

    <TextView
        android:id="@+id/Result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Ans"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.959" />

    <TextView
        android:id="@+id/Ans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Result"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.959" />

</androidx.constraintlayout.widget.ConstraintLayout>